fix jpms
Signed-off-by: Olivier Lamy <oliver.lamy@gmail.com>